fixed label toggling, background, margin, z-index; toolbar shown on mouseover only

--- a/src/components/ImageView/Toolbar/ToolbarComponent.scss
+++ b/src/components/ImageView/Toolbar/ToolbarComponent.scss
@@ -2,11 +2,17 @@
 
 .image-toolbar {
     position: absolute;
-    margin: 4px auto 4px 10px;
+    margin: 5px;
     border: 1px solid $gray5;
     border-radius: 3px;
+    background-color: $white;
     
     &.bp3-dark {
         border: 1px solid $black;
+        background-color: $dark-gray4;
+    }
+    
+    &.docked {
+        z-index: 2;
     }
 }
